tests/semantic/valid/if_block.c
/*
 * Multi-line comment.
 */


int32_t main(int32_t, char argv) {
    int8_t a = 1;
    int8_t b = 2;
    int8_t c = 4;

    if (1) {
        7;
        6;
    } else if (0) {
        6;
        5;
    } else {
        7;
        5;
    }
}