tests/semantic/invalid/function_declaration_definition_parameter_number.c
/*
 * Multi-line comment.
 */

void foo(int8_t a, char c);

void foo(int8_t a)
{
    return;
}
